# PolyUploader

./: .gitignore  README.md  main.js  package-lock.json  package.json  tailwind.config.js
src/: index.html  loading.html  script.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Resources/: profiles.json  prohibited_format.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/warp-cors/: Cargo.toml
src-tauri/warp-cors/src/: client.rs  lib.rs  main.rs
src-tauri/windows/: hooks.nsh
src/js/: api.js  check_host.js  check_update.js  drag_drop.js  globals.js  history.js  import_export_data.js  main.js  onboarding.js  profiles.js  search.js  sort_table.js  tauri.js  upload.js  utils.js  window.js  windows_context_menu.js
