[package]
name = "Automatic-File-Uploader"
version = "1.3.0"
description = "Automatic-File-Uploader"
authors = ["spel987"]
license = ""
repository = "https://github.com/spel987/Automatic-File-Uploader"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
tauri = { version = "1.5", features = [ "window-unmaximize", "window-maximize", "fs-read-file", "shell-open", "fs-read-dir", "protocol-asset", "path-all", "window-start-dragging", "window-close", "window-minimize"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
