[package]
name = "PolyUploader"
version = "1.7.1"
description = "PolyUploader"
authors = ["spel987"]
license = ""
repository = "https://github.com/spel987/PolyUploader"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
zip = { version = "0.5" }
tauri = { version = "2", features = [ "protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
mime_guess = "2.0.5"
warp-cors = { path = "warp-cors" }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
